--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "yexp"
-version = "0.1.1"
+version = "0.1.3"
 edition = "2021"
 
 license = "GPL-3.0"
 authors = ["fixcix"]
 keywords = ["cli", "yaml", "tools"]
 categories = ["config", "command-line-utilities", "development-tools"]
-description = "`yexp` is a small tool for expand yaml files"
+description = "yexp is a small tool for expand yaml files"
 readme = "README.md"
 repository = "https://github.com/fixcik/yexp"
 
